--- a/index.html
+++ b/index.html
@@ -16,32 +16,34 @@
   <body>
     <header>
       <h1 class="title">Quality feedbacks for your SaaS products</h1>
-      <p>The blocks & components you need</p>
+      <p class="titleDescription">The blocks & components you need</p>
     </header>
     <main>
       <section class="sectionOne">
-        <div class="iconOne">✋</div>
-        <h3 class="subTitleOne">Collect Feedback at Multiple Touchpoints</h3>
-        <p>Provide a comprehensive understanding of the customer experience.</p>
-        <img class="imgOne" src="photo_1@2x.png" alt="" />
+        <div class="icon iconOne">✋</div>
+        <h3 class="supTitle">Collect Feedback at Multiple Touchpoints</h3>
+        <p class="description">
+          Provide a comprehensive understanding of the customer experience.
+        </p>
+        <img class="img" src="resources/photo_1@2x.png" alt="" />
       </section>
       <section class="sectionTwo">
-        <div class="iconTwo">🥅</div>
-        <h3 class="subTitleTwo">Ask Targeted and Specific Questions</h3>
-        <p>
+        <div class="icon iconTwo">🥅</div>
+        <h3 class="supTitle">Ask Targeted and Specific Questions</h3>
+        <p class="description">
           Avoid vague or open-ended questions that may not yield actionable
           insights.
         </p>
-        <img class="imgTwo" src="photo_2@2x.png" alt="" />
+        <img class="img" src="resources/photo_2@2x.png" alt="" />
       </section>
       <section class="sectionThree">
-        <div class="iconThree">💬</div>
-        <h3 class="subTitleThree">Prioritize and Respond to Feedback</h3>
-        <p>
+        <div class="icon iconThree">💬</div>
+        <h3 class="supTitle">Prioritize and Respond to Feedback</h3>
+        <p class="description">
           Communicate the changes or improvements you've made in response to
           their feedback.
         </p>
-        <img class="imgThree" src="photo_3@2x.png" alt="" />
+        <img class="img" src="resources/photo_3@2x.png" alt="" />
       </section>
     </main>
   </body>
